--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@
 /public/assets
 .byebug_history
 
+# ENV
+.env
+/config/environments/override_variables.rb
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
@@ -34,3 +38,6 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
